--- a/spring-delivery-app/auth-service/pom.xml
+++ b/spring-delivery-app/auth-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>content-service</artifactId>
+    <artifactId>auth-service</artifactId>
 
     <dependencies>
         <dependency>
@@ -21,7 +21,6 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
