--- a/spring-delivery-app/menu-service/src/main/resources/application.yml
+++ b/spring-delivery-app/menu-service/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
   port: 8002
+
+spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  datasource:
+    url: jdbc:h2:file:~/test
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
