working version: added redis and kafka between menu-service and restaurants-service

--- a/spring-delivery-app/menu-service/src/main/resources/application.yml
+++ b/spring-delivery-app/menu-service/src/main/resources/application.yml
@@ -11,3 +11,13 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  cloud:
+    stream:
+      bindings:
+        output:
+          destination: menu
+
+#      kafka:
+#        binder:
+#          zkNodes: localhost
+#          brokers: localhost
